sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<-0 to getNombreValeurs()-2){
    if (plusPetit(i:int,i+1)) {
      echange(i,i+1);
    }
  }
}